# dr-claude-code-plugins-re

./: .gitignore  .mcp.json  BACKLOG.md  CHANGELOG.md  CHATGPT-STABLE.md  CLAUDE.md  DATA_EXTRACTION_STRATEGY.md  DEVELOPMENT_GUIDELINES.md  DO_THIS_NOW.txt  DYNAMIC_JWT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INDEX.md  LICENSE  NOTEBOOK_TROUBLESHOOTING.md  NOTEBOOK_UPDATED.md  PHASE_1_2_SUMMARY.md  QUESTIONS_FOR_TEAM.md  QUICK_FIX.txt  README.md  README_NOTEBOOK_SETUP.md  REFRESH_CREDENTIALS.py  SETUP.md  START_HERE_NOTEBOOK_FIX.md  SUMMARY.txt  TABLE_STRUCTURE_ANALYSIS.md  build-cowork-zip.sh  install-datarails-plugin.bat  install-datarails-plugin.command  marketplace.json  setup.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
agents/: anomaly-detector.md  audit.md  dashboard.md  departments.md  finance-analyst.md  forecast.md  insights.md  reconciliation.md
code/: settings.json
commands/: budget-comparison.md  data-check.md  drilldown.md  expense-analysis.md  explore-tables.md  financial-summary.md  login.md  revenue-trends.md  (+1 more)
mcp-server/: README.md  pyproject.toml
mcp-server/scripts/: GET_DYNAMIC_JWT.py  anomaly_detector.py  api_diagnostic.py  compliance_auditor.py  comprehensive_fpna_report.py  department_analytics.py  executive_dashboard.py  extract_financials.py  forecast_analyzer.py  generate_live_reports.py  insights_generator.py  intelligence_workbook.py  professional_fpna_generator.py  reconciliation_engine.py
mcp-server/src/datarails_mcp/: __init__.py  auth.py  browser_cookies.py  chart_builder.py  cli.py  client.py  constants.py  excel_builder.py  pdf_builder.py  pptx_builder.py  report_utils.py  server.py
mcp-server/templates/: README.md  chart_styles.json
mcp-server/tests/: __init__.py  test_report_utils.py  test_server.py
(+86 files in other folders)
