[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datarails-finance-os-mcp"
version = "0.2.0"
description = "MCP server for Datarails Finance OS integration with Claude (bundled plugin version)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Datarails" }]
keywords = ["mcp", "datarails", "finance", "claude", "anthropic", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "aiohttp>=3.9.0",
    "browser-cookie3>=0.20.0",
    "openpyxl>=3.1.5",
    "python-pptx>=0.6.23",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "rich>=13.0.0",
]
rich = [
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Datarails/dr-claude-code-plugins"
Documentation = "https://github.com/Datarails/dr-claude-code-plugins#readme"
Repository = "https://github.com/Datarails/dr-claude-code-plugins"
Issues = "https://github.com/Datarails/dr-claude-code-plugins/issues"

[project.scripts]
datarails-mcp = "datarails_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datarails_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
